Added protection on get url, added mailservice to send mails.

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ MONGO_USERNAME=myutilityxgo
 MONGO_PASSWORD=go!2004utility
 INIT_DB=myutilityx
 MONGO_URL=mongodb://myutilityxgo:go!2004utility@localhost:27017
+SENDGRID_API_KEY=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
