--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,10 @@ cache:
 
 build:
   stage: build
+  before_script:
+    - apk add --no-cache --upgrade bash
+    - apk add --no-cache git
+    - apk add --no-cache openssh-client
   script:
     - go mod download  
     - go build .  
@@ -19,7 +23,7 @@ deploy:
   script:
     - go mod download  
     - go build .
-    - 'which ssh-agent || ( apk update && apk add openssh-client )'
+    - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
     - eval $(ssh-agent -s) && echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
     - eval $(ssh-agent -s) && echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
     - mkdir -p ~/.ssh
