--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ image: golang:1.21-alpine
 
 stages:
   - build
+  - build-docker
   - deploy  
 
 cache:
@@ -17,6 +18,16 @@ build:
   script:
     - go mod download  
     - go build .  
+
+build image:
+  stage: build-docker
+  image: docker
+  services:
+    - docker:dind
+  script:
+    - echo $CI_REGISTRY_PASSWORD | docker login -u $CI_REGISTRY_USER $CI_REGISTRY --password-stdin
+    - docker build -t $CI_REGISTRY_IMAGE .
+    - docker push $CI_REGISTRY_IMAGE
 
 deploy:  
   stage: deploy
