--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,27 @@
-version: '3.8'
+version: "3.8"
 services:
   mongodb:
-    container_name: mongodb
+    container_name: database_container
     image: mongo:latest
     restart: always
     volumes:
       - mongodb:/data/db
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-      args:
-        MONGO_URL: ${MONGO_URL}
-        MONGO_DB_NAME: ${MONGO_DB_NAME}
-        API_URL: ${API_URL}
-        UI_URL: ${UI_URL}
+    networks:
+      - my-network
+  mux_backend:
+    build: .
     ports:
       - 8080:8080
+    environment:
+      MONGO_URL: mongodb://mongodb:27017
+      MONGO_DB_NAME: myutilityx
+      API_URL: https://api.mux.com
+      UI_URL: https://mux.com
     depends_on:
       - mongodb
+    networks:
+      - my-network
 volumes:
   mongodb: {}
+networks:
+  my-network: {}
