--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,11 @@ services:
   mongodb:
     container_name: database_container
     image: mongo:latest
+    ports:
+      - 27017:27017
     restart: always
     volumes:
       - mongodb:/data/db
-    networks:
-      - my-network
   mux_backend:
     build: .
     ports:
@@ -23,5 +23,3 @@ services:
       - my-network
 volumes:
   mongodb: {}
-networks:
-  my-network: {}
