--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   mongodb:
     container_name: database_container
     image: mongo:latest
+    platform: linux/arm64
     restart: always
     volumes:
       - mongodb:/data/db
@@ -10,6 +11,7 @@ services:
       - my-network
   mux_backend:
     build: .
+    platform: linux/arm64
     ports:
       - 8080:8080
     environment:
