changes on the ci

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URL = mongodb://mongodb:27017
-MONGO_DB_NAME = myutilityx 
-API_URL = https://api.mux.com
-UI_URL = https://mux.com
+MONGO_URL=mongodb://mongodb:27017
+MONGO_DB_NAME=myutilityx 
+API_URL=https://api.mux.com
+UI_URL=https://mux.com
