--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,21 +35,28 @@ build image:
 deploy:
   stage: deploy
   script:
+    - echo "deployment started!"
     - "which ssh-agent || ( apk update && apk add openssh-client )"
     - eval $(ssh-agent -s) && echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
     - mkdir -p ~/.ssh
     - chmod 700 ~/.ssh
-    - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
-    - ssh $USER@$IP_ADDRESS "mkdir -p /app/backend"
-    - ssh $USER@$IP_ADDRESS "echo \"MONGO_URL=$MONGO_URL\" > /app/backend/.env"
-    - ssh $USER@$IP_ADDRESS "echo \"MONGO_DB_NAME=$MONGO_DB_NAME\" >> /app/backend/.env"
-    - ssh $USER@$IP_ADDRESS "echo \"API_URL=$API_URL\" >> /app/backend/.env"
-    - ssh $USER@$IP_ADDRESS "echo \"UI_URL=$UI_URL\" >> /app/backend/.env"
+   
+    # - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
+    # - ssh $USER@$IP_ADDRESS "mkdir -p /app/backend"
+    # - ssh $USER@$IP_ADDRESS "echo \"MONGO_URL=$MONGO_URL\" > /app/backend/.env"
+    # - ssh $USER@$IP_ADDRESS "echo \"MONGO_DB_NAME=$MONGO_DB_NAME\" >> /app/backend/.env"
+    # - ssh $USER@$IP_ADDRESS "echo \"API_URL=$API_URL\" >> /app/backend/.env"
+    # - ssh $USER@$IP_ADDRESS "echo \"UI_URL=$UI_URL\" >> /app/backend/.env"
     - ssh $USER@$IP_ADDRESS "docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY"
     - ssh $USER@$IP_ADDRESS "docker pull $CI_REGISTRY_IMAGE"
     - ssh $USER@$IP_ADDRESS "docker stop mux-backend || true && docker rm mux-backend || true"
     - ssh $USER@$IP_ADDRESS "docker network create my-network || true"
-    - ssh $USER@$IP_ADDRESS "docker run -d --env-file .env --name mux-backend --network my-network -p 8080:8080 $CI_REGISTRY_IMAGE"
+    - ssh $USER@$IP_ADDRESS "docker run -d --name mux-backend --network my-network -p 8080:8080 \
+-e MONGO_URL=$MONGO_URL \
+-e MONGO_DB_NAME=$MONGO_DB_NAME \
+-e API_URL=$API_URL \
+-e UI_URL=$UI_UI \
+mm $CI_REGISTRY_IMAGE"
   artifacts:
     paths:
       - myutilityx.com
